--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,6 @@
-[package]
-name = "doppelkopf-rs"
-version = "0.1.0"
-edition = "2021"
-authors = ["Ruseel Batista <russbatisbarrrco@gmail.com>"]
-description = "A CLI implementation of Doppelkopf cards game - https://en.wikipedia.org/wiki/Doppelkopf"
-license = "MIT"
-homepage = "https://rbatistab.com/"
-# documentation = "TBD"
-repository = "https://github.com/Rbatistab/doppelkopf-rs"
-
-[lib]
-name = "cards_lib"
-path = "src/lib/lib.rs"
+[workspace]
+members = [
+  "doppelkopf-rs",
+  "game-cards"
+]
+resolver = "2"
