--- a/join_new_game_lambda/Cargo.toml
+++ b/join_new_game_lambda/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "play_trick"
+name = "join_new_game_lambda"
 version = "0.1.0"
 edition = "2021"
 authors = ["Russell Batista <russbatisbarrrco@gmail.com>"]
-description = "Lambda operation that updates game state to represent that user played a card (trick)"
+description = "Lambda operation that creates a new game state and stores it"
 license = "MIT"
 homepage = "https://rbatistab.com/"
 # documentation = "TBD"
 repository = "https://github.com/Rbatistab/doppelkopf-rs"
 
 [[bin]]
-name="play_trick_handler"
-path="src/play_trick_handler.rs"
+name="join_new_game_lambda_handler"
+path= "src/join_new_game_lambda_handler.rs"
 
 [dependencies]
