--- a/play_trick_lambda/Cargo.toml
+++ b/play_trick_lambda/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
-name = "deal_cards"
+name = "play_trick_lambda"
 version = "0.1.0"
 edition = "2021"
 authors = ["Russell Batista <russbatisbarrrco@gmail.com>"]
-description = "Lambda operation that updates game state to represent a card dealing"
+description = "Lambda operation that updates game state to represent that user played a card (trick)"
 license = "MIT"
 homepage = "https://rbatistab.com/"
 # documentation = "TBD"
 repository = "https://github.com/Rbatistab/doppelkopf-rs"
+
+[[bin]]
+name="play_trick_lambda_handler"
+path= "src/play_trick_lambda_handler.rs"
 
 [dependencies]
