--- a/doppelkopf_cards_lib/Cargo.toml
+++ b/doppelkopf_cards_lib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "game-cards"
+name = "doppelkopf_cards_lib"
 version = "0.1.0"
 edition = "2021"
 authors = ["Russell Batista <russbatisbarrrco@gmail.com>"]
