--- a/doppelkopf_cards_lib/Cargo.toml
+++ b/doppelkopf_cards_lib/Cargo.toml
@@ -10,3 +10,4 @@ homepage = "https://rbatistab.com/"
 repository = "https://github.com/Rbatistab/doppelkopf-rs"
 
 [dependencies]
+clap = { version = "4.5.23" }
