--- a/doppelkopf_cards_lib/Cargo.toml
+++ b/doppelkopf_cards_lib/Cargo.toml
@@ -10,5 +10,6 @@ homepage = "https://rbatistab.com/"
 repository = "https://github.com/Rbatistab/doppelkopf-rs"
 
 [dependencies]
+const_format = "0.2.34"
 clap = { version = "4.5.23" }
 regex = "1.11.1"
