--- a/crates/dppkf_cli/Cargo.toml
+++ b/crates/dppkf_cli/Cargo.toml
@@ -25,4 +25,5 @@ dppkf_lib.workspace = true
 clap = { version = "4.5.23", features = ["derive"] }
 const_format = "0.2.34"
 env_logger = "0.11.5"
+inquire = "0.7.5"
 log = "0.4.22"
