--- a/crates/dppkf_cli/Cargo.toml
+++ b/crates/dppkf_cli/Cargo.toml
@@ -22,8 +22,10 @@ dppkf_cards_lib.workspace = true
 dppkf_lib.workspace = true
 
 # External dependencies
+anyhow = "1.0.97"
 clap = { version = "4.5.23", features = ["derive"] }
 const_format = "0.2.34"
 env_logger = "0.11.5"
 inquire = "0.7.5"
 log = "0.4.22"
+tokio = { version = "1.44.2", features = ["full"] }
